# ppi-mono

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: README.md  python-rewrite-design-mom-pods.md
docs/pi-mono-rewrite/: 01-ai-agent-design.md  02-coding-agent-architecture.md  03-python-rewrite-plan.md  04-coding-agent-core.md  05-ui-design.md  06-agent-coding-agent-design.md  06-coding-agent-python-module-design.md  07-coding-agent-python-api-draft.md  08-coding-agent-implementation-matrix.md  09-python-package-structure.md  10-coding-agent-core-call-flow.md  11-pimono-ai-protocol-draft.md  12-pi-cli-mode-sequence.md  13-python-protocols-and-dataclasses.md  16-python-implementation-task-breakdown.md  17-mom-pods-protocols.md  18-pimono-ai-code-skeleton.md  19-pimono-agent-core-interface.md  20-pimono-ai-code-templates.md  21-pimono-coding-agent-interface-draft.md  22-mom-message-file-scheduler-sequence.md  23-pods-command-sequences.md  24-mom-pods-python-package-skeleton.md  25-mom-pods-python-protocols.md  26-ppi-ai-reuse-mapping.md  27-provider-templates-and-transports.md  28-coding-agent-persistence-schemas.md  29-coding-agent-jsonschema.md  31-coding-agent-web-ui-total-design.md  32-mom-pods-web-ui-design.md  33-interface-spec-and-migration.md  34-python-package-layout.md  35-python-package-structure-files.md  README.md
docs/pi-mono-rewrite/examples/: provider-registry.json
python/: README.md  pyproject.toml
python/schemas/coding-agent/: model-registry.schema.json  schema-registry.json  session-entry.schema.json  session-header.schema.json  settings.schema.json
python/src/ppi_agent_core/: __init__.py  agent.py  events.py  loop.py  proxy.py  types.py
python/src/ppi_ai/: __init__.py  auth.py  events.py  models.py  registry.py  stream.py
python/src/ppi_ai/providers/: __init__.py  anthropic.py  azure_openai_responses.py  base.py  bedrock.py  common.py  mistral.py  openai_completions.py  openai_responses.py
python/src/ppi_coding_agent/: __init__.py
python/src/ppi_coding_agent/cli/: __init__.py  bootstrap.py  main.py
python/src/ppi_coding_agent/core/: __init__.py  auth.py  auth_types.py  compaction.py  compaction_types.py  extension_types.py  extensions.py  helpers.py  internal.py  memory.py  model_registry.py  model_types.py  providers.py  public.py  reader.py  resource_loader.py  resource_types.py  rpc.py  rpc_types.py  runtime_types.py  schemas.py  session.py  session_types.py  settings.py  settings_types.py  tool_types.py  tools.py  tree.py  types.py  writer.py
python/src/ppi_coding_agent/modes/: __init__.py  composer_pane.py  environment.py  header_pane.py  interactive.py  overlay_pane.py  print_mode.py  rpc_mode.py  shared.py  transcript_pane.py  tui.py  tui_state.py
python/src/ppi_mom/: __init__.py  agent.py  events.py  protocols.py  runtime.py  sandbox.py  scheduler.py  slack.py  store.py  workspace.py
python/src/ppi_mom/tools/: __init__.py  attach.py  bash.py  edit.py  read.py  write.py
python/src/ppi_pods/: __init__.py  agent.py  cli.py  config.py  logs.py  models.py  planner.py  protocols.py  remote.py  runtime.py  setup.py  start.py  stop.py  vllm.py
python/src/ppi_tui/: __init__.py  autocomplete.py  components.py  keys.py  renderer.py  terminal.py  types.py
python/src/ppi_web/: __init__.py  artifacts.py  chat_panel.py  messages.py  sandbox.py  storage.py  tools.py
python/tests/: test_provider_templates_and_persistence.py
